12/31/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4 'Scale':
	- Build fixes
	- Script fixes
	- Logging fixes
	
12/29/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3.0.2 'Ferro':
	- Debian 'squeeze' compilation fix

12/26/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3.0.1 'Ferro':
	- install procedure minor improvements

12/24/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3 'Ferro':
	- default conf file renamed to turnserver.conf
	- build script improved
	- client library linking fixed
	- install procedure

12/23/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.2.3 'Luthar':
	- turnserver options fixed
	- man page renamed to turnserver

12/22/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.2.2:
	- Man page fix

12/21/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.2.1 'Juvens':
	- Man page

12/21/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.2 'Euz':
	- Project cleaning

12/20/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.1 'no name':
	- DTLS extension

12/17/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.0 'no name':
	- RFC 5766
	- RFC 6156