@@ -64,9 +64,9 @@
 #
 #lt-cred-mech
 
-# User accounts
-# User accounts are dynamically checked by the turnserver process, 
-# so they can be changed while the turnserver is running.
+# 'Static' user accounts
+# 'Static' user accounts are NOT dynamically checked by the turnserver process, 
+# so that they can NOT be changed while the turnserver is running.
 #
 #user=username1:key1
 #user=username2:key2
@@ -86,9 +86,18 @@
 # The corresponding user account entry in the config file will be:
 # 
 #user=ninefingers:0xbc807ee29df3c9ffa736523fb2c4e8ee
-# Or (less secure):
+# Or, equivalently (less secure):
 #user=ninefingers:youhavetoberealistic
 #
+
+# 'Dynamic' user accounts database file name
+# 'Dynamic' user accounts are dynamically checked by the turnserver process, 
+# so that they can be changed while the turnserver is running.
+#
+# Default file name is turnuserdb.conf.
+# 
+#userdb=turnuserdb.conf
+
 
 # Realm
 #
