@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN  "25 December 2012" "" ""
+.TH TURN  "31 December 2012" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -65,7 +65,7 @@ to run the programs.
 .PP
 Usage:
 .PP
-$ \fIturnserver\fP [\fB-vfa\fP] [\fB-n\fP | \fB-c\fP <config-file> ] [options]
+$ \fIturnserver\fP [\fB-vfa\fP] [\fB-n\fP | \fB-c\fP <config-file> ] [\fB-b\fP <user-db-file> | \fB--userdb\fP=<user-db-file> ] [options]
 .PP
 $ \fIturnserver\fP \fB-h\fP
 .TP
@@ -113,6 +113,13 @@ upper directory level etc/
 .IP \(bu 3
 /usr/local/etc/
 .RE
+.TP
+.B
+\fB-b\fP, \fB--userdb\fP
+\(cqDynamic' user database file name (default - turnuserdb.conf).
+This user database is being dynamically checked while the \fIturnserver\fP 
+is working, and the user accounts can be changed dynamically by
+editing the file.
 .TP
 .B
 Options:
@@ -256,8 +263,8 @@ Delete a user.
 Options:
 .TP
 .B
-\fB-c\fP, \fB--config-file\fP
-Configuration file.
+\fB-b\fP, \fB--userdb\fP
+\(cqDynamic' user database file name (default - turnuserdb.conf).
 .TP
 .B
 \fB-u\fP, \fB--user\fP
@@ -281,14 +288,14 @@ Generate a key:
 $ \fIturnadmin\fP \fB-k\fP \fB-u\fP <username> \fB-r\fP <realm> \fB-p\fP <password>
 .TP
 .B
-Add/update a user (and realm) in the config file:
+Add/update a user (and realm) in the userdb file:
 .PP
-$ \fIturnadmin\fP \fB-a\fP [\fB-c\fP <config-file>] \fB-u\fP <username> \fB-r\fP <realm> \fB-p\fP <password>
+$ \fIturnadmin\fP \fB-a\fP [\fB-b\fP <user-db-file>] \fB-u\fP <username> \fB-r\fP <realm> \fB-p\fP <password>
 .TP
 .B
-Delete a user from the config file:
+Delete a user from the userdb file:
 .PP
-$ \fIturnadmin\fP \fB-d\fP [\fB-c\fP <config-file>] \fB-u\fP <username>
+$ \fIturnadmin\fP \fB-d\fP [\fB-c\fP <user-db-file>] \fB-u\fP <username>
 .TP
 .B
 Help:
